@@ -4,17 +4,22 @@
 View <a href="https://github.com/GMOD/Apollo/blob/master/docs/Troubleshooting.md">On GitHub</a>
 
 
-Many times the default memory allowance is too low.
-The memory requirements of WebApollo will depend on the the size of your genome and
-how many instances of Web Apollo you host in the same Tomcat instance, but in general,
-we recommend at least 1g for the heap size and 256m for the permgen size
-as a starting point. Suggested settings are:
+In many ocassions the default memory allowance is too low. The memory requirements of Web Apollo will depend on the the size of your genome and how many instances of Web Apollo you host in the same Tomcat instance, but in general, we recommend at least 1g for the heap size and 256m for the PermGen size as a starting point. Suggested settings are:
 
     export CATALINA_OPTS="-Xms512m -Xmx1g -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m"
+
+In cases where the assembled genome is highly fragmented, additional tuning of memory requirements and garbage collection will be necessary to maintain the system stable. Below is an example from a research group that maintains over 40 Apollo instances with assemblies that range from 1,000 to 150,000 scaffolds (reference sequences):  
+<code>
+    "-Xmx12288m -Xms8192m -XX:PermSize=256m -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=64m -XX:+UseG1GC -XX:+CMSClassUnloadingEnabled -Xloggc:$CATALINA_HOME/logs/gc.log -XX:+PrintHeapAtGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
+</code>
 
 To use this setting, edit the setenv.sh script in 
 `$TOMCAT_BIN_DIR/setenv.sh` where `$TOMCAT_BIN_DIR` is where the
 directory where the Tomcat binaries reside.
+
+#### Memory fixes for special cases
+Some members of our community have contributed information on how they 
+
 
 ### Tomcat permissions
 
